# Information_Assurance_FL

quickstart-xgboost/: README.md  final_model.json  pyproject.toml
quickstart-xgboost/quickstart_xgboost/: client_app.py  task.py
