[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quickstart-xgboost"
version = "1.0.2"
description = "Federated Learning with XGBoost and Flower YPACETATE prediction w/ kmer"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.26.1",
    "flwr-datasets>=0.6.0",
    "xgboost>=2.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app.components]
serverapp = "quickstart_xgboost.server_app:app"
clientapp = "quickstart_xgboost.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 10        
fraction-train = 1
fraction-evaluate = 1
local-epochs = 1

# XGBoost parameters
params.objective = "reg:squarederror"
params.eta = 0.05              
params.max-depth = 3            
params.eval-metric = "rmse"
params.nthread = 4              
params.num-parallel-tree = 1
params.subsample = 0.8         
params.colsample-bytree = 0.8   
params.min-child-weight = 3     
params.tree-method = "hist"
params.seed = 42    

